--- a/frontend/src/app/parts/navigation/navigation.component.html
+++ b/frontend/src/app/parts/navigation/navigation.component.html
@@ -51,7 +51,7 @@
                 </a>
             </ng-container>
             <ng-template #noUser>
-                <a class="nav-item nav-link " routerLink="/login">
+                <a class="nav-item nav-link " routerLink="/login" id="loginpage" >
                     Sign In
                 </a>
                 <a class="nav-item nav-link " routerLink="/register">
