--- a/frontend/src/app/pages/card/card.component.html
+++ b/frontend/src/app/pages/card/card.component.html
@@ -12,7 +12,7 @@
         </div>
         <br>
         <a routerLink="/product/{{productInfo.productId}}" *ngIf="productInfo.productStatus == 0; else offBlock"
-           class="btn btn-primary btn-lg"
+           class="btn btn-primary btn-lg" id="getit"
         >Get It!</a>
         <ng-template #offBlock><a class="btn btn-secondary btn-lg disabled">Unavailable</a></ng-template>
       </div>
