--- a/frontend/src/app/pages/product-edit/product-edit.component.html
+++ b/frontend/src/app/pages/product-edit/product-edit.component.html
@@ -95,7 +95,7 @@
             </select>
         </div>
         <div class="form-group">
-            <button type="submit" [disabled]="!form.form.valid" class="btn btn-lg btn-primary btn-block">Submit</button>
+            <button type="submit" [disabled]="!form.form.valid" class="btn btn-lg btn-primary btn-block" id="submit-edit">Submit</button>
         </div>
     </form>
 
