--- a/frontend/src/app/pages/product-list/product.list.component.html
+++ b/frontend/src/app/pages/product-list/product.list.component.html
@@ -1,4 +1,4 @@
-<h1 align="center" class="display-4 ">Products</h1>
+<h1 align="center" class="display-4 " id="products">Products</h1>
 <a *ngIf="currentUser?.role == Role.Customer" style="color: inherit"
    routerLink="/seller/product/new" class="float-right mb-3"><i class="fas fa-plus fa-2x">Add</i>
 </a>
@@ -29,7 +29,7 @@
         <td class="align-middle">{{productInfo.productStock}}</td>
         <td class="align-middle">{{ProductStatus[productInfo.productStatus]}}</td>
         <td class="align-middle">
-            <a style="display: block" routerLink="/seller/product/{{productInfo.productId}}/edit">
+            <a style="display: block" id="editPr" routerLink="/seller/product/{{productInfo.productId}}/edit">
                 Edit</a>
 
             <a *ngIf="currentUser?.role == Role.Customer" style="display: block"
