--- a/frontend/src/app/pages/order/order.component.html
+++ b/frontend/src/app/pages/order/order.component.html
@@ -26,13 +26,13 @@
         <td class="align-middle">{{order.buyerAddress}}</td>
         <td class="align-middle">{{order.orderAmount | currency}}</td>
         <td class="align-middle">{{order.createTime | date}}</td>
-        <td class="align-middle">{{OrderStatus[order.orderStatus]}}</td>
+        <td class="align-middle" id="status">{{OrderStatus[order.orderStatus]}}</td>
         <td class="align-middle">
             <a *ngIf="!(currentUser.role == Role.Customer && currentUser.name == order.buyerEmail)"
                style="display:
             block" href="" routerLink="/order/{{order.orderId}}">
                 Show</a>
-            <a *ngIf="order.orderStatus == 0" style="display: block" (click)="cancel(order)" routerLink="./">Cancel</a>
+            <a *ngIf="order.orderStatus == 0" style="display: block" (click)="cancel(order)" routerLink="./" id="cancel">Cancel</a>
             <a *ngIf="currentUser.role != Role.Customer && order.orderStatus == 0"
                style="display: block"
                (click)="finish(order)"
