--- a/frontend/src/app/pages/product-list/product.list.component.html
+++ b/frontend/src/app/pages/product-list/product.list.component.html
@@ -12,7 +12,7 @@
         <th scope="col">Description</th>
         <th scope="col">Price</th>
         <th scope="col">Stock</th>
-        <th scope="col">Status</th>
+        <th scope="col" id="status">StatuFs</th>
         <th scope="col">Action</th>
     </tr>
     </thead>
@@ -24,7 +24,7 @@
         <td class="align-middle">{{productInfo.productId}}</td>
         <td class="align-middle">{{productInfo.productName}}</td>
         <td class="align-middle">{{CategoryType[productInfo.categoryType]}}</td>
-        <td class="align-middle">{{productInfo.productDescription}}</td>
+        <td class="align-middle" id="desc">{{productInfo.productDescription}}</td>
         <td class="align-middle">{{productInfo.productPrice | currency}}</td>
         <td class="align-middle">{{productInfo.productStock}}</td>
         <td class="align-middle">{{ProductStatus[productInfo.productStatus]}}</td>
