--- a/frontend/src/app/pages/user-edit/user-detail.component.html
+++ b/frontend/src/app/pages/user-edit/user-detail.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="form-group">
       <label><b>Name</b></label>
-      <input [(ngModel)]="user.name" type="text" class="form-control form-control-lg" id="name" name="name" placeholder="Your name" required #name="ngModel" autofocus>
+      <input [(ngModel)]="user.name" type="text" class="form-control form-control-lg" id="named" name="name" placeholder="Your name" required #name="ngModel" autofocus>
       <div  *ngIf="name.invalid && (name.dirty || name.touched)">
         <div *ngIf="name.errors.required">
           Name is required.
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group">
       <label><b>Password</b></label>
-      <input  [(ngModel)]="user.password" type="password" class="form-control form-control-lg" id="password" name="password" placeholder="Password" minlength="3" required #password="ngModel">
+      <input  [(ngModel)]="user.password" type="password" class="form-control form-control-lg" id="passworded" name="password" placeholder="Password" minlength="3" required #password="ngModel">
       <div  *ngIf="password.invalid && (password.dirty ||password.touched)">
         <div *ngIf="password.errors.required">
           Password is required.
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="form-group">
-      <button type="submit" class="btn btn-lg btn-primary btn-block" [disabled]="!form.form.valid" >Update</button>
+      <button type="submit" class="btn btn-lg btn-primary btn-block" [disabled]="!form.form.valid"  id="submited">Update</button>
     </div>
   </form>
 </div>
