--- a/frontend/src/app/parts/navigation/navigation.component.html
+++ b/frontend/src/app/parts/navigation/navigation.component.html
@@ -39,11 +39,11 @@
             </a>
 
             <ng-container *ngIf="currentUser; else noUser">
-                <a class="nav-item nav-link " routerLink="/order">
+                <a class="nav-item nav-link " routerLink="/order" id="orders">
                     <i class="fas fa-list-ul"></i>
                     Orders
                 </a>
-                <a class="nav-item nav-link " routerLink="/profile">
+                <a class="nav-item nav-link " id="nameN" routerLink="/profile">
                     {{name}}
                 </a>
                 <a class="nav-item nav-link " (click)="logout()" routerLink="/login" [queryParams]="{logout: true}">
